src/routes/layout.css
@import 'tailwindcss';
@plugin '@tailwindcss/forms';
@plugin '@tailwindcss/typography';

.logo {
    font-size: 1.5rem;
    font-weight: bold;
    color: #150315;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 5%;
    background-color: #c8a2c8;
    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
    position: sticky;
    top: 0;
    z-index: 1000;
    font-family: sans-serif;

}

.navlinks {
    display: flex;
    list-style: none;
}

.navlinks li {
    margin-left: 2rem;
}

.navlinks a {
    text-decoration: none;
    color: black;
    font-size: 1rem;
    font-weight: 500;
    transition: color 0.3s ease;
}

.pagetitle {
    margin:0;
    font-size:70px;
    font-family: sans-serif;
    text-align:center;
}

.pageinfo {
    margin: 0;
    font-size: 30px;
    font-family: sans-serif;
    text-align: center;
}

.button {
    display: inline-block;
    padding: 10px 20px;
    background-color: #c8a2c8;
    border-radius: 5px;
    cursor:pointer;
}

.button:disabled {
    opacity: 0.35;
    cursor: not-allowed;
    filter: grayscale(100%);
    transform: scale(0.95);
}


.grid {
    display: grid;
    grid-template-columns: repeat(10,90px);
    grid-template-rows: repeat(10,90px);
    gap:0px;
    margin: 20px;
    justify-content:center;
}

.cells {
    position: relative;
    background-colour: #c8a2c8 ;
    border: 1px solid #333;
    display: flex;
    align-items: center;
    font-size: 14px;
    cursor: pointer;
}

.divider-section {
    padding: 1rem 0;
}

.icon {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 10%;
    height: 10%;
    background-color: black;
    border-radius: 50%;
    transition: all 0.2s ease;
}

tile-icons {
    display:grid;
    grid-template-columnns: repeat(2,1fr);
    width: 100%;
    height: 100%;
}

.red {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 10%;
    height: 10%;
    background-color: red;
    border-radius: 50%;
    transition: all 0.2s ease;
}

.blue {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 10%;
    height: 10%;
    background-color: red;
    border-radius: 50%;
    transition: all 0.2s ease;
}

.green {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 10%;
    height: 10%;
    background-color: red;
    border-radius: 50%;
    transition: all 0.2s ease;
}

.yellow {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 10%;
    height: 10%;
    background-color: red;
    border-radius: 50%;
    transition: all 0.2s ease;
}

